<resources>
    <string name="app_name">సెబితే శానా వుంది..</string>
    <string name="name">యింటే యెంతో వుంది..</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="view_image">Drawable View Image</string>
    <string name="done_button">Done</string>
    <string name="whatisyournickname_hint">What is your nick name?</string>
    <string name="story">TUESDAY, APRIL 24, 2007
\n\n\n చిరకాలమున్న నేకార్యమగును!?
\nవీరబల్లె.
\nపదిహైదేండ్ల క్రితం.
\nఊరికి పడమట ఉన్న రక్షకభటనిలయం ఆవరణం లో...
\nఅప్పటికి దాని చుట్టూ ఇనుపకంచె లేదు, ఇప్పుడున్నంత బందోబస్తు లేదు, నక్సలైట్లు లేవు, వీధిలైట్లు మాత్రమే ఉండేవి.

\n\n\nపొద్దుగూకి చానా సేపయింది.
\nదట్టమైన పెద్దపెద్ద రావిచెట్ల గుంపు.
\nఅడుగడుక్కూ ఒక గూడు కట్టి కాకులు దాన్ని మరింత చిక్కగా చేశాయి.
\nఅవి గూళ్లకు చేరే వేళ మహా కోలాహలంగా ఉంటుందక్కడ.
\nఆ మానుల మీద పున్నమైనా సరే, కింద మాత్రం అమవాస్యే.

\n\n\nపండు వెన్నెల. ప్రశాంతమైన గాలి.
\nకాకులన్నింటికీ నిద్రపట్టినట్లుంది. ఒక కాకిపిల్ల మాత్రం మేలుకొనే ఉంది.
\n"మ్మా..." వాళ్లమ్మ మెడ కింద మెల్లిగా ముక్కుతో గీకింది.
\n"ఊఁ..." అలసి ఉన్నా ఓపిగ్గా మృదువైన కంఠంతో ఏమిటని అడిగింది అమ్మ.

\n\n\n"పుట్టినరోజు పండగ మనింట్లో ఎప్పుడొచ్చాది?" ఎన్నో దినాలుగా అడగాలనుకొన్న సంగతి అడిగింది.
\nఅమ్మకు ఆ ప్రశ్న చాలా ముచ్చటగొలిపింది. మగతలోనే మురిపెంగా అంది -
\n"నువ్వు బుట్టింది పున్నమినాడు నాయినా. ఆ యెన్నెట్లో సందమామ మాదిరి నిగనిగ మెరిసిన నిన్నుజూసి..."
\n"మడే, ఈరోజు పొద్దన్నే పోలీసోళ్లింట్లో ... ఆ పండగ. మనింట్లో ఎప్పుడూ అని"
\n"అదా, వాళ్ల పిల్లోడుపుట్టి ఇరబైయ్యేండ్లయిందంట. వోళ్లు మనుసులు నాయినా. అందుకు పండగ."
\n"మనకు!?"
\n"మనకు యా పూటకాపూట కడుపు నిండితే పండగ, ల్యాకంటే యండగ" ఆవులిస్తూ నవ్వేసింది అమ్మ.

\n\n\nకాకులన్నీ అరమోడుపు కండ్లతో మగతలోనే వింటున్నాయీ సంభాషణ.
\n"కాకి చిరకాలమున్న నే కార్యమగును!?" అవ్వ నోట పలికిందీ మాట.
\nవేదాంత ధోరణిలో అందో లేక -మీకేమైనా తెలుసా- అని అడిగిందో!

\n\n\nఅవ్వ చెప్పిన మాట అమ్మకాకితో సహా ఎవ్వరికీ నచ్చినట్లు లేదు.
\n"సరే, మనిసి బుట్టి యేముద్దరించినాడంట, అంత సంబరం జేసుకుండేదానికి!?" అందొక పెండ్లిగాని ముదురు మగ కాకి.

\n\n\nఆ నోటిదురుసుకు మనసులోనే నవ్వుకొని, "మనం మాత్రం ఏం ఉద్ధరిస్తున్నాం గనక..."
\nవయసు నేర్పిన అనుభవంతో దీర్ఘం తీసింది అవ్వ. ఈ మారు పెండ్లిగాని కాకి గతుక్కుమంది.
\nకొన్ని కన్నెకాకులు కిసుక్కుమన్నాయి. అవ్వ వాటిని వారించింది.

\n\n\nకాకులు ఆలోచనలో పడ్డాయి. అక్కడ నిశ్శబ్దం ఆవరించింది.
\nఅవ్వ గొంతు సవరించుకొంది. కాకులన్నీ చెవులొగ్గాయి.

\n\n\n"నేను బుట్టినప్పుడు కరువొచ్చింది. నీళ్లు దొరికేదే గగనం. అట్టాటి కరువు మీరెవురూ సూళ్యా. మడుసులకే టికానా లేదు. గౌరుమింటోళ్లు తలాయింత గంజిబోస్తే దోసిట్లోబట్టి ఒక్క గుటకన తాగి, అరిచేతులు, మోచేతులు, ముక్కులూ మూతులూ నాకుతాన్న్యారు. గంజి కోసరం కొట్టుకుంటాన్న్యారు.ఒక్క సుక్క నీళ్లుగూడా కనపరాల్యా మాకు. ఐనాగానీ, తాగేదానికీ తినేదానికీ యేమన్నా కండ్లబడిందంటే యినపణ్ణెంత దూరం క్యాకేసి పిలిసి దొరికిందే అందరం తలా ఇంత తిని పానాలు ఉగ్గబట్టుకున్యాం. కలిమిడితనం. పెద్దోళ్లు మాకు నేరిపింది ఇది. ఇదే మేము మీకు నేరిపింది. మీరు మీ బిడ్డలకు నేరిపేదీ ఇదే. చిరకాలము నుంచీ కాకి చేస్తాండే కార్యం ఇదే. ఉద్ధరించమంటే ఇదేరా. ఇంగేందోగాదు."

\n\n\nఅని ఆపి, తల పైకెత్తి చందమామనును చూసింది. కాకులన్నీ అవ్వ చూసినవైపే చూశాయి.
\n"నిజమేగదా" - అన్నట్లుంది చందమామ చూపు. నిజమేనని కాకులన్నీ తలలూపాయి.
\nనిశ్శబ్దాన్ని కూడా శ్రద్ధగా వింటున్నాయి. పెండ్లిగాని కాకి అవ్వకు దగ్గరగా జరిగింది.

\n\n\nఅవ్వ మళ్లీ అందుకుంది నెమ్మదైన స్వరంతో - "ఎంతమంది బుట్టినారు, ఎంతమంది సచ్చినారు, ఎన్ని పుట్టినరోజు పండగలు జేసుకున్యారు - ఇయ్యన్నీ యెందుకూ కొరగావు. పుట్టినదినం అసలు పండగెందుకురా నాకు తెలీకడుగుతా! ఇన్నాళ్లు బతికినామని సంకలు గుద్దుకునేదానికా? ఆయుసులో ఒక సంవత్సరం కరిగి పోయనే నని యేడిసేదానికా? ఎందుకు పుట్టినామో తెలీదు. పుట్టడమనేది పెద్ద గొప్పసంగతా, కాదు. అది నీ చేతుల్లో లేదు. పుట్టినాంక నువ్వు ఎట్టా బతుకుతాండావనేదే నీచేతుల్లో ఉంటాది. నలగరి కోసరం. అంతే. నీకోసరమే నువ్వు బతికితే, నీకు ఇరబైయ్యేండ్లొచ్చే యెవునిగ్గావాల, నూరేండ్లు నిండితే యెవున్నిగ్గావాల,నూకలు జెల్లిపోతే యెవునిగ్గావాల? ఏ పండగైనా పదీ మందికీ పండగైతేనే నీకూ పండగ."

\n\n\nఊపిరి తీసుకోవడానికి రెండు క్షణాలు ఆగింది అవ్వ.

\n\n\n"పదుగురి సౌఖ్యం పండే దినమే పండుగ కాదా, పక్కవారి గుండెలనిండా చిక్కనైన వేదన నిండ యే హాయి రాదోయి నీవైపు మరుకు" అని చెప్పేవోళ్లూ సేసేవోళ్లూ మనుసుల్లోగూడా ఉండారు. వాళ్లుగూడా మన కాకి జాతే. వాళ్లు గూడా చిరకాలం ఉంటార్రా. శాశ్వతంగా ఉంటారు. మనుసులు పోవచ్చు. వోళ్లుజెప్పిన మాటలు బోవు. అదే కార్యం. చిరకాలం ఉండడమంటే అదే." అని ముగించింది.

\n\n\nఒక్క నిముషం కాకులన్నీ అవ్వ చెప్పిన మాటను నెమరు వేసుకొన్నాయి. సులభంగా ఆ మాటలను వాటి రక్తంలోకి జీర్ణించుకొన్నాయి. మనుషులకు అంత జీర్ణశక్తి లేదు పాపం.

\n\n\nఅవ్వ చెప్పిన చివరి మాటలు విన్న కాసేపటికి, రేడియోలో సినిమా సినిమాపాటలు శ్రద్ధగా వినే ఒక కన్నెకాకికి ఏదో గుర్తుకు వచ్చింది.
రాగానే అమాంతంగా మొదలెట్టేసింది ఎనౌన్స్‌మెంటుతో సహా. అయితే, చాలా మధురంగా పాడింది:


\n\n\nచిత్రసీమ చిలింజీతాలు.
\n... చిత్రంలోని పాట వింటారు రచన సీనా-రాయణరెడ్డి, గాయని పీసుశీల.

\n\n\nపుట్టినరోజు పండగే అందరికీ
\nమరి పుట్టింది ఎందుకో తెలిసేది ఎందరికీ...
\n.....
\n.....
\nప్రతి కాకీ తన జన్మకు పరమార్థం తెలుసుకొని
\nతన కోసమే కాదు, పరుల కొరకు బ్రతకాలి
\nతానున్నా లేకున్నా తన పేరు మిగలాలి ||పుట్టినరోజు||


\n\n\nపాట పూర్తయేసరికి కాకులన్నీ నిద్రపోయాయి. పెళ్లికాని నోటిదురుసు మగ కాకి మాత్రం ఆ గాయనీమణిని ఎంతో ఆరాధనగా, ఆర్తిగా, ఆపేక్షగా, ఆశగా చూస్తూ పండువెన్నెల్లో పాటకు పరవశమైపోసాగింది. గాయనీమణులను, నటీమణులను, ఇతరమణులను చూసి అలా పరవశమైపోవడం దానికి మామూలేగానీ, పాపం కన్నెకాకికి మాత్రం కొత్త.
\n\n\nరచన: రానారె సమయం 4:27 PM </string>

</resources>